--- a/src/test/resources/android.local.properties
+++ b/src/test/resources/android.local.properties
@@ -1,5 +1,5 @@
-avd=Pixel 6 Pro API 33
-deviceName=Pixel 6 Pro API 33
+avd=Pixel_6_Pro_API_33
+deviceName=Pixel_6_Pro_API_33
 platformName=Android
 automationName=uiautomator2
 platformVersion=13
